Updated model structure - Index > HardwarePsirt > HardwareBhs > Hardware

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ansible==2.9.6
 asgiref==3.2.7
+bootstrap4==0.1.0
 asn1crypto==0.24.0
 Babel==2.5.1
 bcrypt==3.1.6
@@ -82,3 +83,5 @@ systemd-python==234
 urllib3==1.24.2
 virtualenv==15.1.0
 Werkzeug==0.12.2
+
+django-filter~=2.2.0
